Using yaml for page content

--- a/src/views/home/home.scss
+++ b/src/views/home/home.scss
@@ -57,7 +57,7 @@
     }
   }
 
-  .WhyChooseContainer {
+  .WhyUsContainer {
     display: flex;
     height: 670px;
 
@@ -162,7 +162,7 @@
     }
   }
 
-  .MeetContainer {
+  .MeetOurTeamContainer {
     display: flex;
     flex-direction: column;
     align-items: center;
