--- a/src/views/home/home.scss
+++ b/src/views/home/home.scss
@@ -7,7 +7,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background: #999;
+    background: url(../../assets/img/main-bkg.png);
     width: 100%;
     height: 460px;
 
@@ -46,7 +46,6 @@
           width: 150px;
           height: 150px;
           margin-bottom: 20px;
-          border: 1px solid gray;
         }
 
         .Description {
@@ -79,7 +78,8 @@
     }
 
     .Image {
-      border: 1px solid gray;
+      background: url(../../assets/img/why-choose-bkg.png) no-repeat;
+      background-size: cover;
       flex: 1;
     }
   }
@@ -188,7 +188,6 @@
           width: 120px;
           height: 120px;
           border-radius: 100%;
-          border: 1px solid gray;
           margin-bottom: 16px;
         }
 
