--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -15,3 +15,11 @@
     font-weight: bold;
   }
 }
+
+.Panel {
+  background: white;
+  border-radius: 14px;
+  padding: 35px 40px;
+  box-sizing: border-box;
+  box-shadow: 0.2px 0.2px 11px 0 rgba(45,44,233,0.14);
+}
